<resources>
    <string name="app_name">Attendance Management System</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please Wait</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="user_name_or_password_not_valid">User Name or password not valid</string>
    <string name="ok">OK</string>
    <string name="no_data">No Data</string>
    <string name="settings">Settings</string>
    <string name="manage">Manage</string>
    <string name="attendance">Attendance</string>
    <string name="report">Report</string>
    <string name="name">Name</string>
    <string name="code">Code</string>
    <string name="comment">Comment</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="change_password">Change Password</string>
    <string name="change_language">Change Language</string>


</resources>
