<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ViewActivity.HomeActivity">


    <include
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonClickToAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        android:visibility="gone"
        android:background="@android:color/transparent"
        android:textColor="@color/colorPrimary"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/buttonColor"
        android:layout_gravity="top"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">




        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                android:id="@+id/Attendance"
                app:cardBackgroundColor="#BD0FE0"
                android:layout_width="160dp"
                android:layout_height="190dp"
                app:cardCornerRadius="15dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:elevation=".5dp"
                        android:scaleX="1.5"
                        android:scaleY="1.5"
                        android:layout_gravity="center|top"
                        android:src="@drawable/ic_camera"
                        android:padding="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/colorWhite"
                        android:layout_marginTop="10dp"
                        android:text="@string/attendance"/>




                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/manage"
                app:cardBackgroundColor="#5CEFD2"
                android:layout_width="160dp"
                android:layout_height="190dp"
                app:cardCornerRadius="15dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:elevation=".5dp"
                        android:scaleX="1.5"
                        android:scaleY="1.5"
                        android:layout_gravity="center|top"
                        android:src="@drawable/ic_manage"
                        android:padding="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/colorWhite"
                        android:layout_marginTop="10dp"
                        android:text="@string/manage"/>




                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                android:id="@+id/setting"
                app:cardBackgroundColor="#4B8FE2"
                android:layout_width="160dp"
                android:layout_height="190dp"
                app:cardCornerRadius="15dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:elevation=".5dp"
                        android:scaleX="1.5"
                        android:scaleY="1.5"
                        android:layout_gravity="center|top"
                        android:src="@drawable/ic_setting"
                        android:padding="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/colorWhite"
                        android:layout_marginTop="10dp"
                        android:text="@string/settings"/>




                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/report"
                app:cardBackgroundColor="#F3A726"
                android:layout_width="160dp"
                android:layout_height="190dp"
                app:cardCornerRadius="15dp"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:elevation=".5dp"
                        android:scaleX="1.5"
                        android:scaleY="1.5"
                        android:layout_gravity="center|top"
                        android:src="@drawable/ic_report"
                        android:padding="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/colorWhite"
                        android:layout_marginTop="10dp"
                        android:text="@string/report"/>




                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>




    </LinearLayout>


</LinearLayout>
